Fix spacing between twitter follow button and facepile.

--- a/app/assets/stylesheets/_sidebar.css.sass
+++ b/app/assets/stylesheets/_sidebar.css.sass
@@ -444,7 +444,7 @@ div.social-buttons
     margin: 7px 0 0 -1px
 
   .twitter-follow-button
-    margin: -2px 0 0 -1px
+    margin: 10px 0 0 -1px
 
 ul.social-like-buttons
   +inline-block-list
